// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/team/TeamList should match snapshot 1`] = `
<div
  className="TeamsList"
>
  <DataGrid
    columns={
      Array [
        Object {
          "field": "name",
          "fixed": true,
          "name": <FormattedMessage
            defaultMessage="Name"
            id="admin.team_settings.team_list.nameHeader"
            values={Object {}}
          />,
          "width": 4,
        },
        Object {
          "field": "management",
          "fixed": true,
          "name": <FormattedMessage
            defaultMessage="Management"
            id="admin.team_settings.team_list.mappingHeader"
            values={Object {}}
          />,
        },
        Object {
          "field": "edit",
          "fixed": true,
          "name": "",
          "textAlign": "right",
        },
      ]
    }
    endCount={1}
    loading={false}
    nextPage={[Function]}
    page={0}
    placeholderEmpty={
      <FormattedMessage
        defaultMessage="No teams found"
        id="admin.team_settings.team_list.no_teams_found"
        values={Object {}}
      />
    }
    previousPage={[Function]}
    rows={
      Array [
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editText"
              data-testid="DNedit"
            >
              <ForwardRef
                to="/admin_console/user_management/teams/123"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.team_settings.team_row.configure"
                  values={Object {}}
                />
              </ForwardRef>
            </span>,
            "id": "123",
            "management": <span
              className="TeamList_managementText"
            >
              <FormattedMessage
                defaultMessage="Invite Only"
                id="admin.team_settings.team_row.managementMethod.inviteOnly"
                values={Object {}}
              />
            </span>,
            "name": <div
              className="TeamList_nameColumn"
            >
              <div
                className="TeamList__lowerOpacity"
              >
                <TeamIcon
                  name="DN"
                  size="sm"
                  url={null}
                />
              </div>
              <div
                className="TeamList_nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN
                </b>
              </div>
            </div>,
          },
          "onClick": [Function],
        },
      ]
    }
    rowsContainerStyles={
      Object {
        "minHeight": "80px",
      }
    }
    search={[Function]}
    startCount={1}
    term=""
    total={1}
  />
</div>
`;

exports[`admin_console/team_channel_settings/team/TeamList should match snapshot with paging 1`] = `
<div
  className="TeamsList"
>
  <DataGrid
    columns={
      Array [
        Object {
          "field": "name",
          "fixed": true,
          "name": <FormattedMessage
            defaultMessage="Name"
            id="admin.team_settings.team_list.nameHeader"
            values={Object {}}
          />,
          "width": 4,
        },
        Object {
          "field": "management",
          "fixed": true,
          "name": <FormattedMessage
            defaultMessage="Management"
            id="admin.team_settings.team_list.mappingHeader"
            values={Object {}}
          />,
        },
        Object {
          "field": "edit",
          "fixed": true,
          "name": "",
          "textAlign": "right",
        },
      ]
    }
    endCount={10}
    loading={false}
    nextPage={[Function]}
    page={0}
    placeholderEmpty={
      <FormattedMessage
        defaultMessage="No teams found"
        id="admin.team_settings.team_list.no_teams_found"
        values={Object {}}
      />
    }
    previousPage={[Function]}
    rows={
      Array [
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editText"
              data-testid="DN0edit"
            >
              <ForwardRef
                to="/admin_console/user_management/teams/id0"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.team_settings.team_row.configure"
                  values={Object {}}
                />
              </ForwardRef>
            </span>,
            "id": "id0",
            "management": <span
              className="TeamList_managementText"
            >
              <FormattedMessage
                defaultMessage="Invite Only"
                id="admin.team_settings.team_row.managementMethod.inviteOnly"
                values={Object {}}
              />
            </span>,
            "name": <div
              className="TeamList_nameColumn"
            >
              <div
                className="TeamList__lowerOpacity"
              >
                <TeamIcon
                  name="DN0"
                  size="sm"
                  url={null}
                />
              </div>
              <div
                className="TeamList_nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN0
                </b>
              </div>
            </div>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editText"
              data-testid="DN1edit"
            >
              <ForwardRef
                to="/admin_console/user_management/teams/id1"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.team_settings.team_row.configure"
                  values={Object {}}
                />
              </ForwardRef>
            </span>,
            "id": "id1",
            "management": <span
              className="TeamList_managementText"
            >
              <FormattedMessage
                defaultMessage="Invite Only"
                id="admin.team_settings.team_row.managementMethod.inviteOnly"
                values={Object {}}
              />
            </span>,
            "name": <div
              className="TeamList_nameColumn"
            >
              <div
                className="TeamList__lowerOpacity"
              >
                <TeamIcon
                  name="DN1"
                  size="sm"
                  url={null}
                />
              </div>
              <div
                className="TeamList_nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN1
                </b>
              </div>
            </div>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editText"
              data-testid="DN2edit"
            >
              <ForwardRef
                to="/admin_console/user_management/teams/id2"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.team_settings.team_row.configure"
                  values={Object {}}
                />
              </ForwardRef>
            </span>,
            "id": "id2",
            "management": <span
              className="TeamList_managementText"
            >
              <FormattedMessage
                defaultMessage="Invite Only"
                id="admin.team_settings.team_row.managementMethod.inviteOnly"
                values={Object {}}
              />
            </span>,
            "name": <div
              className="TeamList_nameColumn"
            >
              <div
                className="TeamList__lowerOpacity"
              >
                <TeamIcon
                  name="DN2"
                  size="sm"
                  url={null}
                />
              </div>
              <div
                className="TeamList_nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN2
                </b>
              </div>
            </div>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editText"
              data-testid="DN3edit"
            >
              <ForwardRef
                to="/admin_console/user_management/teams/id3"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.team_settings.team_row.configure"
                  values={Object {}}
                />
              </ForwardRef>
            </span>,
            "id": "id3",
            "management": <span
              className="TeamList_managementText"
            >
              <FormattedMessage
                defaultMessage="Invite Only"
                id="admin.team_settings.team_row.managementMethod.inviteOnly"
                values={Object {}}
              />
            </span>,
            "name": <div
              className="TeamList_nameColumn"
            >
              <div
                className="TeamList__lowerOpacity"
              >
                <TeamIcon
                  name="DN3"
                  size="sm"
                  url={null}
                />
              </div>
              <div
                className="TeamList_nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN3
                </b>
              </div>
            </div>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editText"
              data-testid="DN4edit"
            >
              <ForwardRef
                to="/admin_console/user_management/teams/id4"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.team_settings.team_row.configure"
                  values={Object {}}
                />
              </ForwardRef>
            </span>,
            "id": "id4",
            "management": <span
              className="TeamList_managementText"
            >
              <FormattedMessage
                defaultMessage="Invite Only"
                id="admin.team_settings.team_row.managementMethod.inviteOnly"
                values={Object {}}
              />
            </span>,
            "name": <div
              className="TeamList_nameColumn"
            >
              <div
                className="TeamList__lowerOpacity"
              >
                <TeamIcon
                  name="DN4"
                  size="sm"
                  url={null}
                />
              </div>
              <div
                className="TeamList_nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN4
                </b>
              </div>
            </div>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editText"
              data-testid="DN5edit"
            >
              <ForwardRef
                to="/admin_console/user_management/teams/id5"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.team_settings.team_row.configure"
                  values={Object {}}
                />
              </ForwardRef>
            </span>,
            "id": "id5",
            "management": <span
              className="TeamList_managementText"
            >
              <FormattedMessage
                defaultMessage="Invite Only"
                id="admin.team_settings.team_row.managementMethod.inviteOnly"
                values={Object {}}
              />
            </span>,
            "name": <div
              className="TeamList_nameColumn"
            >
              <div
                className="TeamList__lowerOpacity"
              >
                <TeamIcon
                  name="DN5"
                  size="sm"
                  url={null}
                />
              </div>
              <div
                className="TeamList_nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN5
                </b>
              </div>
            </div>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editText"
              data-testid="DN6edit"
            >
              <ForwardRef
                to="/admin_console/user_management/teams/id6"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.team_settings.team_row.configure"
                  values={Object {}}
                />
              </ForwardRef>
            </span>,
            "id": "id6",
            "management": <span
              className="TeamList_managementText"
            >
              <FormattedMessage
                defaultMessage="Invite Only"
                id="admin.team_settings.team_row.managementMethod.inviteOnly"
                values={Object {}}
              />
            </span>,
            "name": <div
              className="TeamList_nameColumn"
            >
              <div
                className="TeamList__lowerOpacity"
              >
                <TeamIcon
                  name="DN6"
                  size="sm"
                  url={null}
                />
              </div>
              <div
                className="TeamList_nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN6
                </b>
              </div>
            </div>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editText"
              data-testid="DN7edit"
            >
              <ForwardRef
                to="/admin_console/user_management/teams/id7"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.team_settings.team_row.configure"
                  values={Object {}}
                />
              </ForwardRef>
            </span>,
            "id": "id7",
            "management": <span
              className="TeamList_managementText"
            >
              <FormattedMessage
                defaultMessage="Invite Only"
                id="admin.team_settings.team_row.managementMethod.inviteOnly"
                values={Object {}}
              />
            </span>,
            "name": <div
              className="TeamList_nameColumn"
            >
              <div
                className="TeamList__lowerOpacity"
              >
                <TeamIcon
                  name="DN7"
                  size="sm"
                  url={null}
                />
              </div>
              <div
                className="TeamList_nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN7
                </b>
              </div>
            </div>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editText"
              data-testid="DN8edit"
            >
              <ForwardRef
                to="/admin_console/user_management/teams/id8"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.team_settings.team_row.configure"
                  values={Object {}}
                />
              </ForwardRef>
            </span>,
            "id": "id8",
            "management": <span
              className="TeamList_managementText"
            >
              <FormattedMessage
                defaultMessage="Invite Only"
                id="admin.team_settings.team_row.managementMethod.inviteOnly"
                values={Object {}}
              />
            </span>,
            "name": <div
              className="TeamList_nameColumn"
            >
              <div
                className="TeamList__lowerOpacity"
              >
                <TeamIcon
                  name="DN8"
                  size="sm"
                  url={null}
                />
              </div>
              <div
                className="TeamList_nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN8
                </b>
              </div>
            </div>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editText"
              data-testid="DN9edit"
            >
              <ForwardRef
                to="/admin_console/user_management/teams/id9"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.team_settings.team_row.configure"
                  values={Object {}}
                />
              </ForwardRef>
            </span>,
            "id": "id9",
            "management": <span
              className="TeamList_managementText"
            >
              <FormattedMessage
                defaultMessage="Invite Only"
                id="admin.team_settings.team_row.managementMethod.inviteOnly"
                values={Object {}}
              />
            </span>,
            "name": <div
              className="TeamList_nameColumn"
            >
              <div
                className="TeamList__lowerOpacity"
              >
                <TeamIcon
                  name="DN9"
                  size="sm"
                  url={null}
                />
              </div>
              <div
                className="TeamList_nameText"
              >
                <b
                  data-testid="team-display-name"
                >
                  DN9
                </b>
              </div>
            </div>,
          },
          "onClick": [Function],
        },
      ]
    }
    rowsContainerStyles={
      Object {
        "minHeight": "800px",
      }
    }
    search={[Function]}
    startCount={1}
    term=""
    total={30}
  />
</div>
`;
